--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ ndarray = "0.16.1"
 libm = "0.2.11"
 numpy = "0.21"
 pyo3 = { version = "0.21", features = ["extension-module"] }
+bat_library = { path = "../bat_library" }
